# qser

./: CMakeLists.txt  Doxyfile  LICENSE.md  Makefile  README.md  doxygen.example  qser
docs/: decoderInterface_8c.html  decoderInterface_8c.js  decoderInterface_8c_source.html  decoderInterface_8h.html  decoderInterface_8h.js  decoderInterface_8h_source.html  dir_0c26bd22f254302c4dfbaa95bf527e9d.html  dir_0c26bd22f254302c4dfbaa95bf527e9d.js  dir_177dd2ba07b72c0bac2389772c9a2074.html  dir_177dd2ba07b72c0bac2389772c9a2074.js  dir_1cee467d967db557397dfb96a54199c6.html  dir_1cee467d967db557397dfb96a54199c6.js  dir_2c77c30b9be634a17b5016c2057f9bcc.html  dir_2c77c30b9be634a17b5016c2057f9bcc.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_8f83ca4ebc6646d7cbbd2f1830916c8f.html  dir_8f83ca4ebc6646d7cbbd2f1830916c8f.js  dir_f9fc5b55cee4a718a0e21ddc98543070.html  dir_f9fc5b55cee4a718a0e21ddc98543070.js  dir_ff6d3b62347b14013d1b0313631a6567.html  dir_ff6d3b62347b14013d1b0313631a6567.js  doxygen.css  files.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  helpers_8c.html  helpers_8c.js  helpers_8c_source.html  helpers_8h.html  helpers_8h.js  helpers_8h_source.html  index.html  mainThread_8c.html  mainThread_8c.js  mainThread_8c_source.html  mainThread_8h.html  mainThread_8h.js  (+25 more)
scripts/: connect.sh  copy2Init.sh  init-pins.sh  send
shield/: Connector.lib  Shield_Galileo  Shield_Galileo-cache.lib  Shield_Galileo-rescue.lib  Shield_Galileo.bak  Shield_Galileo.dsn  Shield_Galileo.kicad_pcb  Shield_Galileo.net  (+8 more)
(+101 files in other folders)
